--- a/Bard/View.xib
+++ b/Bard/View.xib
@@ -15,6 +15,7 @@
                 <outlet property="deleteButton" destination="8fM-hd-egg" id="TQI-02-B1C"/>
                 <outlet property="expandCategoryButton" destination="MZg-ph-cbY" id="0kN-j6-deN"/>
                 <outlet property="nameEntryTextField" destination="2pX-DR-sNE" id="qNi-xI-DcY"/>
+                <outlet property="nameLabel" destination="R9a-B8-WKM" id="vB7-El-qGh"/>
                 <outlet property="nameView" destination="Npz-By-jUS" id="cdh-8Q-Xlw"/>
                 <outlet property="nextKeyboard" destination="0Kw-gm-kfa" id="c2y-31-njy"/>
                 <outlet property="tableView1" destination="Bz2-mo-z6s" id="zs4-ZQ-A2Z"/>
@@ -47,13 +48,21 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R9a-B8-WKM">
+                            <rect key="frame" x="15" y="2" width="45" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <constraints>
+                        <constraint firstItem="R9a-B8-WKM" firstAttribute="leading" secondItem="2pX-DR-sNE" secondAttribute="leading" constant="10" id="4x0-hL-ro0"/>
                         <constraint firstAttribute="bottom" secondItem="2pX-DR-sNE" secondAttribute="bottom" constant="4" id="6Td-uC-4y7"/>
                         <constraint firstItem="2pX-DR-sNE" firstAttribute="top" secondItem="Npz-By-jUS" secondAttribute="top" constant="4" id="AzB-Ht-xeM"/>
                         <constraint firstItem="2pX-DR-sNE" firstAttribute="top" secondItem="Npz-By-jUS" secondAttribute="top" id="ECS-6H-ehW"/>
                         <constraint firstItem="2pX-DR-sNE" firstAttribute="leading" secondItem="Npz-By-jUS" secondAttribute="leading" constant="10" id="Okl-na-ZKY"/>
                         <constraint firstItem="2pX-DR-sNE" firstAttribute="centerX" secondItem="Npz-By-jUS" secondAttribute="centerX" id="csK-7j-bh2"/>
+                        <constraint firstItem="R9a-B8-WKM" firstAttribute="centerY" secondItem="2pX-DR-sNE" secondAttribute="centerY" id="mY2-wJ-IRc"/>
                         <constraint firstAttribute="trailing" secondItem="2pX-DR-sNE" secondAttribute="trailing" constant="10" id="ubW-sw-Gn4"/>
                         <constraint firstItem="2pX-DR-sNE" firstAttribute="centerY" secondItem="Npz-By-jUS" secondAttribute="centerY" id="wYe-F5-shK"/>
                         <constraint firstAttribute="height" constant="25" id="xqV-zx-6ix"/>
