--- a/Bard/View.xib
+++ b/Bard/View.xib
@@ -10,6 +10,7 @@
                 <outlet property="arrowIcon" destination="NeG-D6-vRC" id="4yG-Iu-yLD"/>
                 <outlet property="categoryHeader" destination="yXf-Vk-oPY" id="A5i-CJ-yCe"/>
                 <outlet property="categoryLabel" destination="g9M-jz-emq" id="FXe-fa-Ydh"/>
+                <outlet property="chooseQuoteView" destination="S6X-cn-8I0" id="gzJ-nI-kdM"/>
                 <outlet property="deleteButton" destination="8fM-hd-egg" id="TQI-02-B1C"/>
                 <outlet property="expandCategoryButton" destination="MZg-ph-cbY" id="0kN-j6-deN"/>
                 <outlet property="nameEntryTextField" destination="2pX-DR-sNE" id="qNi-xI-DcY"/>
@@ -18,6 +19,7 @@
                 <outlet property="nextKeyboard" destination="0Kw-gm-kfa" id="c2y-31-njy"/>
                 <outlet property="tableView1" destination="Bz2-mo-z6s" id="zs4-ZQ-A2Z"/>
                 <outlet property="tableView2" destination="thq-F2-UuR" id="pWD-wx-dVl"/>
+                <outlet property="textKeyboardView" destination="Kpi-0C-ci4" id="5i9-tr-GlD"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -232,23 +234,31 @@
                         </mask>
                     </variation>
                 </view>
+                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Kpi-0C-ci4" userLabel="Text Keyboard View">
+                    <rect key="frame" x="-140" y="-200" width="600" height="600"/>
+                    <color key="backgroundColor" red="0.57267680919999997" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="cCg-gG-mVt" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="1dp-rJ-Zqs"/>
                 <constraint firstAttribute="bottom" secondItem="S6X-cn-8I0" secondAttribute="bottom" id="3pm-yV-lN7"/>
                 <constraint firstAttribute="trailing" secondItem="cCg-gG-mVt" secondAttribute="trailing" id="56H-uJ-8NQ"/>
+                <constraint firstItem="Kpi-0C-ci4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="6R0-iy-aUL"/>
                 <constraint firstAttribute="trailing" secondItem="Npz-By-jUS" secondAttribute="trailing" id="CLe-gd-nW8"/>
                 <constraint firstItem="2HK-S0-Cvi" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="GPZ-kH-e87"/>
+                <constraint firstItem="Kpi-0C-ci4" firstAttribute="top" secondItem="cCg-gG-mVt" secondAttribute="bottom" id="STK-SK-IyM"/>
                 <constraint firstItem="Npz-By-jUS" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="SvM-JW-d17"/>
                 <constraint firstAttribute="trailing" secondItem="2HK-S0-Cvi" secondAttribute="trailing" id="UFe-C2-znB"/>
                 <constraint firstItem="2HK-S0-Cvi" firstAttribute="top" secondItem="Npz-By-jUS" secondAttribute="bottom" id="VBZ-E8-zx4"/>
+                <constraint firstAttribute="trailing" secondItem="Kpi-0C-ci4" secondAttribute="trailing" id="ZAQ-Zr-zDY"/>
                 <constraint firstItem="Npz-By-jUS" firstAttribute="top" secondItem="2HK-S0-Cvi" secondAttribute="bottom" id="d3A-Oh-1Wb"/>
                 <constraint firstItem="cCg-gG-mVt" firstAttribute="top" secondItem="Npz-By-jUS" secondAttribute="bottom" id="hEu-Hx-Xk3"/>
                 <constraint firstItem="S6X-cn-8I0" firstAttribute="top" secondItem="cCg-gG-mVt" secondAttribute="bottom" id="mLh-PF-XHC"/>
                 <constraint firstItem="S6X-cn-8I0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="moq-IS-c6k"/>
                 <constraint firstItem="Npz-By-jUS" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="n45-lS-YTG"/>
                 <constraint firstItem="2HK-S0-Cvi" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="pkw-Am-O93"/>
+                <constraint firstAttribute="bottom" secondItem="Kpi-0C-ci4" secondAttribute="bottom" id="uLi-fm-7c4"/>
                 <constraint firstAttribute="trailing" secondItem="S6X-cn-8I0" secondAttribute="trailing" id="ueQ-f9-pJ5"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
