--- a/Bard/View.xib
+++ b/Bard/View.xib
@@ -14,6 +14,7 @@
                 <outlet property="deleteButton" destination="8fM-hd-egg" id="TQI-02-B1C"/>
                 <outlet property="expandCategoryButton" destination="MZg-ph-cbY" id="0kN-j6-deN"/>
                 <outlet property="nameEntryTextField" destination="2pX-DR-sNE" id="qNi-xI-DcY"/>
+                <outlet property="nameEntryTextFieldLeft" destination="Okl-na-ZKY" id="g33-xG-0Pr"/>
                 <outlet property="nameLabel" destination="R9a-B8-WKM" id="vB7-El-qGh"/>
                 <outlet property="nameView" destination="Npz-By-jUS" id="cdh-8Q-Xlw"/>
                 <outlet property="nextKeyboard" destination="0Kw-gm-kfa" id="c2y-31-njy"/>
@@ -234,8 +235,8 @@
                         </mask>
                     </variation>
                 </view>
-                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Kpi-0C-ci4" userLabel="Text Keyboard View">
-                    <rect key="frame" x="-140" y="-200" width="600" height="600"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kpi-0C-ci4" userLabel="Text Keyboard View">
+                    <rect key="frame" x="0.0" y="27" width="320" height="173"/>
                     <color key="backgroundColor" red="0.57267680919999997" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
             </subviews>
