--- a/Bard/View.xib
+++ b/Bard/View.xib
@@ -21,7 +21,10 @@
                 <outlet property="nextKeyboard" destination="0Kw-gm-kfa" id="c2y-31-njy"/>
                 <outlet property="tableView1" destination="Bz2-mo-z6s" id="zs4-ZQ-A2Z"/>
                 <outlet property="tableView2" destination="thq-F2-UuR" id="pWD-wx-dVl"/>
+                <outlet property="textKeyboardRowFour" destination="IJa-mM-82E" id="Dvs-cG-IxL"/>
                 <outlet property="textKeyboardRowOne" destination="rTx-Mv-mme" id="F6Z-XG-6py"/>
+                <outlet property="textKeyboardRowThree" destination="Q6S-JF-h7U" id="ms6-Lh-Nxr"/>
+                <outlet property="textKeyboardRowTwo" destination="TVQ-bV-okK" id="KYk-3d-2Ue"/>
                 <outlet property="textKeyboardView" destination="Kpi-0C-ci4" id="5i9-tr-GlD"/>
             </connections>
         </placeholder>
@@ -244,14 +247,44 @@
                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TVQ-bV-okK" userLabel="Row 2">
+                            <rect key="frame" x="0.0" y="43" width="320" height="43"/>
+                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IJa-mM-82E" userLabel="Row 4">
+                            <rect key="frame" x="0.0" y="129" width="320" height="43"/>
+                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q6S-JF-h7U" userLabel="Row 3">
+                            <rect key="frame" x="0.0" y="86" width="320" height="43"/>
+                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" red="0.57267680919999997" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
+                        <constraint firstItem="TVQ-bV-okK" firstAttribute="top" secondItem="rTx-Mv-mme" secondAttribute="bottom" id="1fL-DE-6jO"/>
+                        <constraint firstAttribute="trailing" secondItem="Q6S-JF-h7U" secondAttribute="trailing" id="3cd-OP-Iqt"/>
                         <constraint firstItem="rTx-Mv-mme" firstAttribute="height" secondItem="Kpi-0C-ci4" secondAttribute="height" multiplier="0.25" id="7eD-6G-SKq"/>
+                        <constraint firstItem="IJa-mM-82E" firstAttribute="leading" secondItem="Kpi-0C-ci4" secondAttribute="leading" id="8IH-9a-B7a"/>
+                        <constraint firstItem="TVQ-bV-okK" firstAttribute="leading" secondItem="Kpi-0C-ci4" secondAttribute="leading" id="NJ7-HG-Lvk"/>
+                        <constraint firstItem="TVQ-bV-okK" firstAttribute="height" secondItem="rTx-Mv-mme" secondAttribute="height" id="Nwn-Jy-Mn2"/>
+                        <constraint firstItem="Q6S-JF-h7U" firstAttribute="height" secondItem="TVQ-bV-okK" secondAttribute="height" id="PE6-Cd-eGf"/>
+                        <constraint firstItem="IJa-mM-82E" firstAttribute="top" secondItem="Q6S-JF-h7U" secondAttribute="bottom" id="RBY-in-VI6"/>
                         <constraint firstAttribute="trailing" secondItem="rTx-Mv-mme" secondAttribute="trailing" id="UCp-X5-eYK"/>
+                        <constraint firstAttribute="trailing" secondItem="TVQ-bV-okK" secondAttribute="trailing" id="aQg-R6-m7z"/>
+                        <constraint firstItem="IJa-mM-82E" firstAttribute="top" secondItem="TVQ-bV-okK" secondAttribute="bottom" id="k89-PL-2Zn"/>
+                        <constraint firstAttribute="trailing" secondItem="IJa-mM-82E" secondAttribute="trailing" id="lA6-tL-rl7"/>
                         <constraint firstItem="rTx-Mv-mme" firstAttribute="leading" secondItem="Kpi-0C-ci4" secondAttribute="leading" id="nbg-xT-Mip"/>
+                        <constraint firstItem="Q6S-JF-h7U" firstAttribute="leading" secondItem="Kpi-0C-ci4" secondAttribute="leading" id="qu2-yK-Kw6"/>
                         <constraint firstItem="rTx-Mv-mme" firstAttribute="top" secondItem="Kpi-0C-ci4" secondAttribute="top" id="rjh-q4-RMG"/>
+                        <constraint firstItem="Q6S-JF-h7U" firstAttribute="top" secondItem="TVQ-bV-okK" secondAttribute="bottom" id="swT-Ib-vXF"/>
+                        <constraint firstItem="IJa-mM-82E" firstAttribute="height" secondItem="Q6S-JF-h7U" secondAttribute="height" id="umT-oW-Msg"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="k89-PL-2Zn"/>
+                        </mask>
+                    </variation>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
