Fixed border (0.25) error

--- a/Bard/View.xib
+++ b/Bard/View.xib
@@ -95,11 +95,11 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S6X-cn-8I0" userLabel="Choose Quote View">
                     <rect key="frame" x="0.0" y="27" width="320" height="173"/>
                     <subviews>
-                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Bz2-mo-z6s" userLabel="Quote Table View">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="129"/>
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Bz2-mo-z6s" userLabel="Quote Table View">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="127"/>
                         </tableView>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yXf-Vk-oPY" userLabel="Category Table View Header">
-                            <rect key="frame" x="0.0" y="129" width="320" height="44"/>
+                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yXf-Vk-oPY" userLabel="Category Table View Header">
+                            <rect key="frame" x="0.0" y="127" width="320" height="44"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Kw-gm-kfa" userLabel="Next Keyboard Button">
                                     <rect key="frame" x="0.0" y="0.0" width="40" height="44"/>
@@ -203,25 +203,25 @@
                                 </mask>
                             </variation>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Dy-eB-g35" userLabel="Border View">
-                            <rect key="frame" x="0.0" y="173" width="320" height="0.0"/>
+                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Dy-eB-g35" userLabel="Border View">
+                            <rect key="frame" x="0.0" y="171" width="320" height="2"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="0.25" id="xzs-Sn-8fG"/>
+                                <constraint firstAttribute="height" constant="1" identifier="Border View Height" id="xzs-Sn-8fG"/>
                             </constraints>
                         </view>
-                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="thq-F2-UuR" userLabel="Category Table View">
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="thq-F2-UuR" userLabel="Category Table View">
                             <rect key="frame" x="0.0" y="173" width="320" height="0.0"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </tableView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="thq-F2-UuR" firstAttribute="top" secondItem="1Dy-eB-g35" secondAttribute="bottom" id="6Ko-Po-D3S"/>
+                        <constraint firstItem="thq-F2-UuR" firstAttribute="top" secondItem="1Dy-eB-g35" secondAttribute="bottom" identifier="Category Table Top" id="6Ko-Po-D3S"/>
                         <constraint firstItem="1Dy-eB-g35" firstAttribute="leading" secondItem="S6X-cn-8I0" secondAttribute="leading" id="75V-qu-IMt"/>
                         <constraint firstItem="thq-F2-UuR" firstAttribute="leading" secondItem="S6X-cn-8I0" secondAttribute="leading" id="88q-yc-uJ3"/>
-                        <constraint firstAttribute="bottom" secondItem="thq-F2-UuR" secondAttribute="bottom" id="Cfb-Od-3Nj"/>
+                        <constraint firstAttribute="bottom" secondItem="thq-F2-UuR" secondAttribute="bottom" identifier="Category Table Bottom" id="Cfb-Od-3Nj"/>
                         <constraint firstItem="yXf-Vk-oPY" firstAttribute="leading" secondItem="S6X-cn-8I0" secondAttribute="leading" id="I8D-Uu-0bJ"/>
                         <constraint firstAttribute="trailing" secondItem="Bz2-mo-z6s" secondAttribute="trailing" id="IzH-yw-g0a"/>
                         <constraint firstItem="Bz2-mo-z6s" firstAttribute="leading" secondItem="S6X-cn-8I0" secondAttribute="leading" id="Ola-bw-rMs"/>
@@ -232,7 +232,7 @@
                         <constraint firstItem="yXf-Vk-oPY" firstAttribute="top" secondItem="Bz2-mo-z6s" secondAttribute="bottom" id="kGV-7r-GS3"/>
                         <constraint firstAttribute="trailing" secondItem="1Dy-eB-g35" secondAttribute="trailing" id="lCg-vZ-x21"/>
                         <constraint firstAttribute="trailing" secondItem="thq-F2-UuR" secondAttribute="trailing" id="sHL-l1-xeW"/>
-                        <constraint firstAttribute="bottom" secondItem="yXf-Vk-oPY" secondAttribute="bottom" id="tVb-Jf-wkh"/>
+                        <constraint firstAttribute="bottom" secondItem="yXf-Vk-oPY" secondAttribute="bottom" identifier="Category Header Bottom" id="tVb-Jf-wkh"/>
                     </constraints>
                     <variation key="default">
                         <mask key="constraints">
@@ -289,11 +289,11 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="cCg-gG-mVt" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="1dp-rJ-Zqs"/>
-                <constraint firstAttribute="bottom" secondItem="S6X-cn-8I0" secondAttribute="bottom" id="3pm-yV-lN7"/>
+                <constraint firstAttribute="bottom" secondItem="S6X-cn-8I0" secondAttribute="bottom" identifier="Choose Quote View Bottom" id="3pm-yV-lN7"/>
                 <constraint firstAttribute="trailing" secondItem="cCg-gG-mVt" secondAttribute="trailing" id="56H-uJ-8NQ"/>
                 <constraint firstItem="Kpi-0C-ci4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="6R0-iy-aUL"/>
                 <constraint firstAttribute="trailing" secondItem="Npz-By-jUS" secondAttribute="trailing" id="CLe-gd-nW8"/>
-                <constraint firstItem="2HK-S0-Cvi" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="GPZ-kH-e87"/>
+                <constraint firstItem="2HK-S0-Cvi" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" identifier="Name-Top Border Leading" id="GPZ-kH-e87"/>
                 <constraint firstItem="Kpi-0C-ci4" firstAttribute="top" secondItem="cCg-gG-mVt" secondAttribute="bottom" id="STK-SK-IyM"/>
                 <constraint firstItem="Npz-By-jUS" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="SvM-JW-d17"/>
                 <constraint firstAttribute="trailing" secondItem="2HK-S0-Cvi" secondAttribute="trailing" id="UFe-C2-znB"/>
